--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+footer {
+    width: fit-content;
+    /* background-color: lightgray; */
+    margin-left: auto;
+    margin-right: auto;
+}
 .footer-section-container {
     display: flex;
     flex-direction: row;
